--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
   font-family: "Poppins", sans-serif;
 }
 nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
